manifests/geofeed/geofeed.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geofeed
  namespace: geofeed
spec:
  selector:
    matchLabels:
      run: geofeed
  replicas: 2
  template:
    metadata:
      labels:
        run: geofeed
    spec:
      containers:
      - name: geofeed
        image: nginx
        ports:
        - containerPort: 443
        volumeMounts:
        - name: geofeed-config
          mountPath: /etc/nginx/conf.d
        - name: geofeed-cert
          readOnly: true
          mountPath: /etc/ssl/nginx/
        - name: geofeed-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: geofeed-config
        configMap:
          name: geofeed-config
      - name: geofeed-cert
        secret:
          secretName: acme-cert
      - name: geofeed-html
        configMap:
          name: geofeed-html
---
apiVersion: v1
kind: Service
metadata:
  name: geofeed
  namespace: geofeed
  annotations:
    external-dns.alpha.kubernetes.io/hostname: geofeed.nextheader.dev
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  selector:
    run: geofeed
  type: LoadBalancer
  ports:
  - port: 443
    protocol: TCP
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: geofeed-policy
  namespace: geofeed
spec:
  selector: run == 'geofeed'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    destination:
      ports:
        - 443
  egress:
  - action: Allow
